--- a/frontend/src/components/NavBar/Navbar.css
+++ b/frontend/src/components/NavBar/Navbar.css
@@ -13,7 +13,7 @@
 .navbar-menu{
     display: flex;
     list-style: none;
-    gap: 20px;
+    gap: 80px;
     color: #49557e;
     font-size: 18px;
 }
@@ -37,4 +37,13 @@
 
 .navbar button:hover{
     background-color: #E5AA70;
+}
+
+.navbar .active{
+    padding-bottom: 2px;
+    border-bottom:3px solid #D2B48C;
+}
+
+.navbar li{
+    cursor: pointer;
 }
