--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -16,10 +16,26 @@
     max-width: 50%;
     bottom: 10%;
     left: 6vw;
+    animation: fadeInHeader 3s;
 }
 
 .header-content h2{
     font-weight: 600;
     color:#FAF9F6;
     font-size: max(4.5vw, 22px);
+}
+
+.header-content p{
+    color: white;
+    font-size: 1.5vw;
+}
+
+.header-content button{
+    border: none;
+    color: #747474;
+    font-weight: 500;
+    padding: 1vw 2.3vw;
+    background-color: white;
+    font-size: max(1.3vw, 13px);
+    border-radius: 50px;
 }
