--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -7,7 +7,7 @@
     grid-template-columns: 1fr 1.5fr 1fr 1fr 1fr 0.5fr;
     align-items: center;
     text-align: center;
-    color: grey;
+    color: tomato;
     font-size: max(1vw, 12px);
 }
 
@@ -15,6 +15,7 @@
     margin: 10px 0px;
     color: black;
     align-content: center;
+    font-size:max(1vw, 15px); ;
 }
 
 .cart-items-item img{
@@ -28,11 +29,45 @@
     border: none;
 }
 
-.remove-cross{
+.cart-items-item .remove-cross{
     cursor: pointer;
     font-size: 20px;
 }
 
 .remove-cross:hover{
     color: red;
+}
+
+.cart-bottom{
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-between;
+    gap: max(12vw, 20px);
+}
+
+.cart-total{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.cart-total-details{
+    display: flex;
+    justify-content: space-between;
+    color: #555;
+}
+
+.cart-total hr{
+    margin: 10px 0px;
+}
+
+.cart-total button{
+    border: none;
+    color: white;
+    background-color: tomato;
+    width: max(15vw, 200px);
+    padding: 12px 0px;
+    border-radius: 4px;
+    cursor: pointer;
 }
