--- a/frontend/src/components/FoodDisplay/FoodDisplay.css
+++ b/frontend/src/components/FoodDisplay/FoodDisplay.css
@@ -2,6 +2,11 @@
     margin-top: 30px;
 }
 
+.food-display-title{
+    display: flex;
+    gap: 20px;
+}
+
 .food-display h2{
     font-size: max(2vw,24px);
     font-weight: 600;
