--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -1,8 +1,8 @@
-.cart{
+.cart {
     margin-top: 100px;
 }
 
-.cart-items-title{
+.cart-items-title {
     display: grid;
     grid-template-columns: 1fr 1.5fr 1fr 1fr 1fr 0.5fr;
     align-items: center;
@@ -11,58 +11,69 @@
     font-size: max(1vw, 12px);
 }
 
-.cart-items-item{
+.cart-items-title-names {
+    display: grid;
+    grid-template-columns: 1fr 1.5fr 1fr 1fr 1fr 0.5fr;
+}
+
+.cart-items-empty {
+    font-size: max(1vw, 12px);
+    text-align: center;
+}
+
+.cart-items-item {
     margin: 10px 0px;
     color: black;
     align-content: center;
-    font-size:max(1vw, 15px); ;
+    font-size: max(1vw, 15px);
+    ;
 }
 
-.cart-items-item img{
+.cart-items-item img {
     width: 150px;
     border-radius: 15px;
 }
 
-.cart hr{
+.cart hr {
     height: 1px;
     background-color: #e2e2e2;
     border: none;
 }
 
-.cart-items-item .remove-cross{
+.cart-items-item .remove-cross {
     cursor: pointer;
     font-size: 20px;
 }
 
-.remove-cross:hover{
+.remove-cross:hover {
     color: red;
 }
 
-.cart-bottom{
+.cart-bottom {
     margin-top: 80px;
     display: flex;
     justify-content: space-between;
     gap: max(12vw, 20px);
 }
 
-.cart-total{
+.cart-total {
     flex: 1;
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-.cart-total-details{
+.cart-total-details {
     display: flex;
     justify-content: space-between;
     color: #555;
 }
 
-.cart-total hr{
+.cart-total hr {
     margin: 10px 0px;
 }
 
-.cart-total button{
+.cart-total button {
     border: none;
     color: white;
     background-color: tomato;
@@ -72,19 +83,19 @@
     cursor: pointer;
 }
 
-.cart-total button:hover{
+.cart-total button:hover {
     background-color: #FF8165;
 }
 
-.cart-promo-code{
+.cart-promo-code {
     flex: 1;
 }
 
-.cart-promo-code p{
+.cart-promo-code p {
     color: #555;
 }
 
-.cart-promo-code-input{
+.cart-promo-code-input {
     margin-top: 10px;
     display: flex;
     justify-content: space-between;
@@ -93,15 +104,15 @@
     border-radius: 4px;
 }
 
-.cart-promo-code-input input{
+.cart-promo-code-input input {
     background: transparent;
     border: none;
     outline: none;
     padding-left: 10px;
 }
 
-.cart-promo-code-input button{
-    width: max(10vw,150px);
+.cart-promo-code-input button {
+    width: max(10vw, 150px);
     padding: 12px 5px;
     background-color: black;
     border: none;
@@ -109,11 +120,12 @@
     border-radius: 4px;
 }
 
-@media (max-width:750px){
-    .cart-bottom{
+@media (max-width:750px) {
+    .cart-bottom {
         flex-direction: column-reverse;
     }
-    .cart-promo-code{
+
+    .cart-promo-code {
         justify-content: start;
     }
 }
