--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -38,6 +38,11 @@
     background-color: white;
     font-size: max(1.3vw, 13px);
     border-radius: 50px;
+    cursor: pointer;
+}
+
+.header-content button:hover{
+    background-color: #F9F6EE;
 }
 
 @media (max-width:1050px){
