--- a/frontend/src/components/FoodItemCard/FoodItemCard.css
+++ b/frontend/src/components/FoodItemCard/FoodItemCard.css
@@ -3,8 +3,12 @@
     margin: auto;
     border-radius: 15px;
     box-shadow: 0px 0px 10px #00000015;
-    transition: 0.3s;
+    transition: transform 0.3s ease;
     animation: fadeIn 1s;
+}
+
+.food-item:hover{
+    transform: scale(1.1);
 }
 
 .food-item-image{
