--- a/frontend/src/components/NavBar/Navbar.css
+++ b/frontend/src/components/NavBar/Navbar.css
@@ -7,6 +7,11 @@
 
 .navbar .logo{
     width: 100px;
+    transition: transform 1s ease;
+}
+
+.navbar .logo:hover {
+    transform: rotateX(360deg);
 }
 
 .navbar-menu{
