--- a/frontend/src/components/NavBar/Navbar.css
+++ b/frontend/src/components/NavBar/Navbar.css
@@ -57,6 +57,22 @@
     position: relative;
 }
 
+.navbar-cart-icon img{
+    transition: transform 0.3s ease; 
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 0); }
+    25% { transform: translate(-1px, 0); }
+    50% { transform: translate(1px, 0); }
+    75% { transform: translate(-1px, 0); }
+    100% { transform: translate(0, 0); }
+}
+
+.navbar-cart-icon img:hover{
+    animation: shake 0.5s;
+}
+
 .navbar-cart-icon .cart-add-dot{
     position: absolute;
     min-width: 10px;
