--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -1,20 +1,20 @@
-.explore-menu{
+.explore-menu {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-.explore-menu h1{
+.explore-menu h1 {
     color: #262626;
     font-weight: 500;
 }
 
-.explore-menu-text{
+.explore-menu-text {
     max-width: 60%;
     columns: #808080;
 }
 
-.explore-menu-list{
+.explore-menu-list {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,12 +24,23 @@
     overflow-x: scroll;
 }
 
-
-.explore-menu-list::-webkit-scrollbar{
+/* Hide Scroll bar from evry browser */
+.explore-menu-list::-webkit-scrollbar {
     display: none;
+    /* Safari and Chrome */
 }
 
-.explore-menu-list-item img{
+.explore-menu-list {
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+.explore-menu-list {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+}
+
+.explore-menu-list-item img {
     width: 7.5vw;
     min-width: 80px;
     cursor: pointer;
@@ -37,28 +48,27 @@
     transition: 0.2s;
 }
 
-
-
-.explore-menu-list-item p{
+.explore-menu-list-item p {
     margin-top: 10px;
     color: #747474;
     font-size: max(1.4vw, 16px);
     cursor: pointer;
 }
 
-.explore-menu hr{
+.explore-menu hr {
     margin: 10px 0px;
     height: 3px;
     background-color: #e2e2e2;
     border: none;
 }
-.explore-menu-list-item .active{
+
+.explore-menu-list-item .active {
     border: 6px solid tomato;
     padding: 2px;
 }
 
 @media (max-width:1050px) {
-    .explore-menu-text{
+    .explore-menu-text {
         max-width: 100%;
         font-size: 14px;
     }
